Index Margin Complete and User in PO Report

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -168,14 +168,14 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.QuotCountModels.OLastYear</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastYearValue</span></a></li>
-                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.QuotCountModels.OLastMonth</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OLastMonthValue</span></a></li>
+                                    <li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OLastYearValue</span></a></li>
+                                    <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OLastMonthValue</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.QuotCountModels.OYesterday</span><span class="pull-right badge bg-blue">@Model.QuotCountModels.OYesterdayValue</span></a></li>
-                                    <li><a href="#">Today <span class="badge bg-green">@Model.QuotCountModels.OToday</span><span class="pull-right badge bg-green">@Model.QuotCountModels.OTodayValue</span></a></li>
-                                    <li><a href="#">Current Month <span class="badge bg-red">@Model.QuotCountModels.OCMonth</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCMonthValue</span></a></li>
-                                    <li><a href="#">Current Year <span class="badge bg-red">@Model.QuotCountModels.OCYear</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OCYearValue</span></a></li>
-                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span><span class="pull-right badge bg-red">@Model.QuotCountModels.OTotalValue</span></a></li>*@
+                                    <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OYesterdayValue</span></a></li>
+                                    <li><a href="#">Today <span class="pull-right badge bg-green">@Model.POMarginCountModels.OTodayValue</span></a></li>
+                                    <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCMonthValue</span></a></li>
+                                    <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCYearValue</span></a></li>
+                                    @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span></a></li>*@
                                 </ul>
                             </div>
                         </div>
