--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -172,7 +172,8 @@
                                     <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OLastMonthValue</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
                                     <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OYesterdayValue</span></a></li>
-                                    <li><a href="#">Today <span class="pull-right badge bg-green">@Model.POMarginCountModels.OTodayValue</span></a></li>
+                                   @*<li><a href="#">Today <span class="pull-right badge bg-green">@Model.POMarginCountModels.OTodayValue</span></a></li>*@
+                                    <li>@Html.EncodedActionLink("Today <span class='pull-right badge bg-blue'>" + @Model.POMarginCountModels.OTodayValue + "</span>", "POMargin", "Admin", new { id = "4" }, new { @class = "", title = "", @target = "_blank" })</li>
                                     <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCMonthValue</span></a></li>
                                     <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCYearValue</span></a></li>
                                     @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span></a></li>*@
@@ -182,10 +183,10 @@
                     </div>
                 </div>
                 @*<div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="box-body chart-responsive">
-                <div class="chart" id="bar-chart" style="height: 300px;"></div>
-            </div>
-        </div>*@
+                        <div class="box-body chart-responsive">
+                            <div class="chart" id="bar-chart" style="height: 300px;"></div>
+                        </div>
+                    </div>*@
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div class="box box-success">
                         <div class="box-header with-border">
@@ -288,7 +289,7 @@
 </section>
 <!-- /.content -->
 @*<script type="text/javascript">
-    $(document).ready(function () {
-        
-    });
-</script>*@
+        $(document).ready(function () {
+
+        });
+    </script>*@
