PO Margin User and Date

--- a/Views/Admin/POMargin.cshtml
+++ b/Views/Admin/POMargin.cshtml
@@ -79,6 +79,7 @@
                             <thead>
                                 <tr>
                                     <th>SNo</th>
+                                    <th>@Html.DisplayNameFor(model => model.POMarginModelList.FirstOrDefault().BillDate)</th>
                                     <th>@Html.DisplayNameFor(model => model.POMarginModelList.FirstOrDefault().CustomerName)</th>
                                     <th>@Html.DisplayNameFor(model => model.POMarginModelList.FirstOrDefault().PONumber)</th>
                                     <th>@Html.DisplayNameFor(model => model.POMarginModelList.FirstOrDefault().POId)</th>
@@ -101,26 +102,27 @@
                             <tbody>
                                 @foreach (var item in Model.POMarginModelList)
                                 {
-                                    <tr>
-                                        <td></td>
-                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POPId)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POQuantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.BillQuantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.RemainingQuantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.SalePrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.BuyingQuantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.BuyingUnitPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.BuyingTotalPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.SellingQuantity)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.SellingTotalPrice)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.Margin)</td>
-                                        <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
-                                    </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>@Html.DisplayFor(modelItem => item.BillDate)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.PONumber)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POId)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POPId)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POQuantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.BillQuantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.RemainingQuantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.SalePrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Vendor)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.VPONumber)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.BuyingQuantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.BuyingUnitPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.BuyingTotalPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.SellingQuantity)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.SellingTotalPrice)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Margin)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.POAssignTo)</td>
+                                </tr>
                                 }
                             </tbody>
                         </table>
