--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -36,24 +36,18 @@
                     <div class="col-md-3 col-sm-6 col-xs-12">
                         <div class="box box-widget widget-user-2">
                             <div class="widget-user-header bg-yellow p-10">
-                                <h3 class="widget-user-username m-l-0">Enquiry</h3>
+                                <h3 class="widget-user-username  m-l-0">Enquiry <span class="tot"></span></h3>
                                 <h5 class="widget-user-desc m-l-0">Total (Standard, Non-Standard)</h5>
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    @*<li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.EnqCountModels.OLastYear</span></a></li>*@
-                                    <li><a href="#">Last Year <span class="badge bg-blue">@Model.EnqCountModels.OLastYearS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.OLastYearN</span></a></li>
-                                    @*<li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.EnqCountModels.OLastMonth</span></a></li>*@
-                                    <li><a href="#">Last Month <span class="badge bg-blue">@Model.EnqCountModels.OLastMonthS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.OLastMonthN</span></a></li>
-                                    @* <li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.OLast7Days</span></a></li>*@
-                                    @*<li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.EnqCountModels.OYesterday</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="badge bg-blue">@Model.EnqCountModels.OYesterdayS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.OYesterdayN</span></a></li>
-                                    @*<li><a href="#">Today <span class="pull-right badge bg-green">@Model.EnqCountModels.OToday</span></a></li>*@
-                                    <li><a href="#">Today <span class="badge bg-green">@Model.EnqCountModels.OTodayS</span><span class="pull-right badge bg-green">@Model.EnqCountModels.OTodayN</span></a></li>
-                                    @*<li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.EnqCountModels.OCMonth</span></a></li>*@
-                                    <li><a href="#">Current Month <span class="badge bg-blue">@Model.EnqCountModels.OCMonthS</span><span class="pull-right badge bg-red">@Model.EnqCountModels.OCMonthN</span></a></li>
-                                    <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.OCYear</span></a></li>
-                                    @*<li><a href="#">Total <span class="pull-right badge bg-red">@Model.EnqCountModels.OTotal</span></a></li>*@
+                                    <li class="ienq"><a href="#">Last Year <span class="stn badge bg-blue">@Model.EnqCountModels.OLastYearS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OLastYearN</span></a></li>
+                                    <li class="ienq"><a href="#">Last Month <span class="stn cstn badge bg-blue">@Model.EnqCountModels.OLastMonthS</span><span class="nstn cnstn pull-right badge bg-red">@Model.EnqCountModels.OLastMonthN</span></a></li>
+                                    @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.OLast7Days</span></a></li>*@
+                                    <li class="ienq"><a href="#">Yesterday <span class="stn badge bg-blue">@Model.EnqCountModels.OYesterdayS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OYesterdayN</span></a></li>
+                                    <li class="ienq"><a href="#">Today <span class="stn badge bg-green">@Model.EnqCountModels.OTodayS</span><span class="nstn pull-right badge bg-green">@Model.EnqCountModels.OTodayN</span></a></li>
+                                    <li class="ienq"><a href="#">Current Month <span class="stn badge bg-blue">@Model.EnqCountModels.OCMonthS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OCMonthN</span></a></li>
+                                    <li class="ienq"><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.OCYear</span></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -168,14 +162,13 @@
                             </div>
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
-                                    <li><a href="#">Last Year <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OLastYearValue</span></a></li>
-                                    <li><a href="#">Last Month <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OLastMonthValue</span></a></li>
+                                    <li>@Html.EncodedActionLink("Last Year <span class='pull-right badge bg-blue'>" + @Model.POMarginCountModels.OLastYearValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
+                                    <li>@Html.EncodedActionLink("Last Month <span class='pull-right badge bg-blue'>" + @Model.POMarginCountModels.OLastMonthValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.POCountModels.OLast7Days</span></a></li>*@
-                                    <li><a href="#">Yesterday <span class="pull-right badge bg-blue">@Model.POMarginCountModels.OYesterdayValue</span></a></li>
-                                    @*<li><a href="#">Today <span class="pull-right badge bg-green">@Model.POMarginCountModels.OTodayValue</span></a></li>*@
-                                    <li>@Html.EncodedActionLink("Today <span class='pull-right badge bg-blue'>" + @Model.POMarginCountModels.OTodayValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
-                                    <li><a href="#">Current Month <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCMonthValue</span></a></li>
-                                    <li><a href="#">Current Year <span class="pull-right badge bg-red">@Model.POMarginCountModels.OCYearValue</span></a></li>
+                                    <li>@Html.EncodedActionLink("Yesterday <span class='pull-right badge bg-blue'>" + @Model.POMarginCountModels.OYesterdayValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
+                                    <li>@Html.EncodedActionLink("Today <span class='pull-right badge bg-green'>" + @Model.POMarginCountModels.OTodayValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
+                                    <li>@Html.EncodedActionLink("Current Month <span class='pull-right badge bg-red'>" + @Model.POMarginCountModels.OCMonthValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
+                                    <li>@Html.EncodedActionLink("Current Year <span class='pull-right badge bg-red'>" + @Model.POMarginCountModels.OCYearValue + "</span>", "POMargin", "Admin", null, new { @class = "", title = "", @target = "_blank" })</li>
                                     @* <li><a href="#">Total <span class="badge bg-red">@Model.QuotCountModels.OTotal</span></a></li>*@
                                 </ul>
                             </div>
