S NonS now working on Edit and Margin and Product model Brand add in Margin and some other Changes

--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -42,11 +42,11 @@
                             <div class="box-footer no-padding">
                                 <ul class="nav nav-stacked">
                                     <li class="ienq"><a href="#">Last Year <span class="stn badge bg-blue">@Model.EnqCountModels.OLastYearS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OLastYearN</span></a></li>
-                                    <li class="ienq"><a href="#">Last Month <span class="stn cstn badge bg-blue">@Model.EnqCountModels.OLastMonthS</span><span class="nstn cnstn pull-right badge bg-red">@Model.EnqCountModels.OLastMonthN</span></a></li>
+                                    <li class="ienq"><a href="#">Last Month <span class="stn badge bg-blue">@Model.EnqCountModels.OLastMonthS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OLastMonthN</span></a></li>
                                     @*<li><a href="#">Last 7 Days <span class="pull-right badge bg-aqua">@Model.EnqCountModels.OLast7Days</span></a></li>*@
                                     <li class="ienq"><a href="#">Yesterday <span class="stn badge bg-blue">@Model.EnqCountModels.OYesterdayS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OYesterdayN</span></a></li>
-                                    <li class="ienq"><a href="#">Today <span class="stn badge bg-green">@Model.EnqCountModels.OTodayS</span><span class="nstn pull-right badge bg-green">@Model.EnqCountModels.OTodayN</span></a></li>
-                                    <li class="ienq"><a href="#">Current Month <span class="stn badge bg-blue">@Model.EnqCountModels.OCMonthS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OCMonthN</span></a></li>
+                                    <li class="ienq"><a href="#">Today <span class="stn badge bg-green">@Model.EnqCountModels.OTodayS</span><span class="nstn cnstn pull-right badge bg-green">@Model.EnqCountModels.OTodayN</span></a></li>
+                                    <li class="ienq"><a href="#">Current Month <span class="stn cstn badge bg-blue">@Model.EnqCountModels.OCMonthS</span><span class="nstn pull-right badge bg-red">@Model.EnqCountModels.OCMonthN</span></a></li>
                                     <li class="ienq"><a href="#">Current Year <span class="pull-right badge bg-red">@Model.EnqCountModels.OCYear</span></a></li>
                                 </ul>
                             </div>
