In Master Level Add Section Complete and user wise Report

--- a/Views/Admin/AddCustomer.cshtml
+++ b/Views/Admin/AddCustomer.cshtml
@@ -208,7 +208,7 @@
                                 </div>
                                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                                     <div class="form-group">
-                                        @Html.LabelFor(m => m.CustomerModels.CINNo, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.LabelFor(m => m.CustomerModels.CINNo, new { @class = "form-control-label" }) 
                                         @Html.TextBoxFor(m => m.CustomerModels.CINNo,
                                 new
                                 {
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                                     <div class="form-group">
-                                        @Html.LabelFor(m => m.CustomerBillingAddressModels.GSTNo, new { @class = "form-control-label" }) <sup>*</sup>
+                                        @Html.LabelFor(m => m.CustomerBillingAddressModels.GSTNo, new { @class = "form-control-label" }) 
                                         @Html.TextBoxFor(m => m.CustomerBillingAddressModels.GSTNo,
                                 new
                                 {
