--- a/Views/Admin/EnquiryReport.cshtml
+++ b/Views/Admin/EnquiryReport.cshtml
@@ -80,7 +80,7 @@
                                 "--Select Type--", new { @class = "form-control select2" })
                             </div>
                         </div>
-                            <div class="col-md-2">
+                        <div class="col-md-2">
                             <div class="box-tools pull-left">
                                 <button type="submit" name="search" class="btn bg-aqua" title="SEARCH"
                                         value="search">
@@ -98,15 +98,18 @@
                             new { @class = "text-danger errcstid" })
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                                <div class="form-group">
-                                    @Html.LabelFor(m => m.User, new { @class = "form-control-label" })
-                                    @Html.DropDownListFor(m => m.User, new SelectList(Model.UserModelList, "Key", "Value"),
-                                    "--Select User--", new { @class = "form-control select2 posentby" })
-                                    @Html.ValidationMessageFor(m => m.User, "",
-                            new { @class = "text-danger" })
+                            @if(Model.UserProfileModels.EmpType != "User")
+                            { 
+                                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.User, new { @class = "form-control-label" })
+                                        @Html.DropDownListFor(m => m.User, new SelectList(Model.UserModelList, "Key", "Value"),
+                                        "--Select User--", new { @class = "form-control select2 posentby" })
+                                        @Html.ValidationMessageFor(m => m.User, "",
+                                new { @class = "text-danger" })
+                                    </div>
                                 </div>
-                            </div>
+                            }
                             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                                 <div class="form-group">
                                     @Html.LabelFor(m => m.EnquiryType, new { @class = "form-control-label" })
@@ -164,29 +167,29 @@
                             <tbody>
                                 @foreach (var item in Model.EnquiriesModelList)
                                 {
-                                <tr>
-                                    <td></td>
-                                    <td hidden></td>
-                                    <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqId)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
-                                    <td title="@item.SpcRemark">
-                                        @Html.DisplayFor(modelItem => item.Product)<br>
-                                    </td>
-                                    <td>@Html.DisplayFor(modelItem => item.Brand)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Type)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqType)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Price)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnquiryDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EndDate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqADate)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.TAT)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
-                                </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td hidden></td>
+                                        <td>@Html.DisplayFor(modelItem => item.CustomerName)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqId)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqPId)</td>
+                                        <td title="@item.SpcRemark">
+                                            @Html.DisplayFor(modelItem => item.Product)<br>
+                                        </td>
+                                        <td>@Html.DisplayFor(modelItem => item.Brand)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.ModelNo)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Type)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqType)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.Price)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.TotalPrice)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnquiryDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EndDate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqADate)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.TAT)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.EnqAssignTo)</td>
+                                        <td>@Html.DisplayFor(modelItem => item.CurrentStage)</td>
+                                    </tr>
                                 }
                             </tbody>
                         </table>
